--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -29,8 +29,7 @@ general {
         Craft a backpack before you head into the Erebus.
         Use a Soul Anchor to set your spawn after arriving in a new dimension.
         Join the Discord to discuss strategies and compete for the world record.
-        The official world record for beating the Wither is less than 6 minutes.
-        Did you know? It is in every world you make.
+        The current world record for beating the Nether boss is less than 6 minutes.
         There is no escape.
         Go into the darkness.
         Check points occur after accessing new dimensions and before every major boss.
@@ -40,6 +39,9 @@ general {
         In this eternal cycle, you are but fleeting shadows.
         Each step you take is one walked by countless before you, each as insignificant as the last.
         Read your Journal! It contains crucial information and lore.
+        Middle-click while in your inventory to sort.
+        Middle-click while in your inventory to sort.
+        Middle-click while in your inventory to sort.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
