move hit indication to file director

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ config/mod-director/file-director_requisites.bundle.json
 shaderpacks/ComplementaryUnbound_r5.0.1.zip
 config/normalasm/methods-stable_39.csv
 /config/spark
+mods/hitindication-1.12.2-2.0.jar
