--- a/config/betterfoliage.cfg
+++ b/config/betterfoliage.cfg
@@ -156,6 +156,11 @@ blocks {
      >
     S:netherrackBlacklist <
      >
+    S:packedIceWhitelist <
+        net.minecraft.block.BlockPackedIce
+     >
+    S:packedIceBlacklist <
+     >
 }
 
 
@@ -239,6 +244,15 @@ netherrack {
     D:heightMin=0.6
     D:heightMax=0.8
     D:size=1.0
+}
+
+
+packedIce {
+    B:enabled=true
+    D:hOffset=0.1
+    D:heightMin=1.0
+    D:heightMax=1.5
+    I:population=16
 }
 
 
