--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -298,6 +298,12 @@ general {
         # Maximum Modifier for Nunchaku (Damage * (1+this))
         D:"Nunchaku Combo Max Modifier"=1.0
 
+        # Amount of seconds OTG's populate should wait to try to lock (Do not modify this if you do not know what you are doing.)
+        I:"OTG Populate Lock Time"=10
+
+        # Amount of seconds OTG's saveToDisk should wait to try to lock (Do not modify this if you do not know what you are doing.)
+        I:"OTG SaveToDisk Lock Time"=10
+
         # Makes Parasite armor cure/lower the effect of Fear
         B:"Parasite Armor Fear Curing"=false
 
@@ -343,6 +349,9 @@ general {
 
         # How many attempts will random respawning try to find a good spawn point. WARNING: Higher values will cause more lag on respawns
         I:"Random Respawn Protection Attempts"=0
+
+        # Registers additional useful loot functions for json loot tables
+        B:"Register Additional Loot Functions"=true
 
         # Add and register Antimagic Talisman, and a recipe for crafting it with enchanted items
         B:"Register Antimagic Talisman"=false
@@ -649,12 +658,18 @@ general {
         # Replaces Launch potion's effect from PotionCore with Delayed Launch, for compatibility with knockback effects
         B:"Delayed Launch (PotionCore)"=false
 
+        # Disable the digging AI for digging mobs that are not carrying a pickaxe
+        B:"Digging AI (Epic Siege Mod)"=false
+
         # Disables Mo'Bends online checks that can cause the game to freeze on loading
         B:"Disable MoBends Online Checks (MoBends)"=true
         B:"Disable Waystones Used Name Check (Waystones)"=false
 
         # Fixes Disenchanting table crashing when broken while someone is still in the GUI
         B:"Disenchanting Table Crash Patch (Disenchanter)"=false
+
+        # Fixes chunk generation errors when a doomlike dungeon attempts to generate in an area with no theme
+        B:"Doomlike Dungeon No Theme Error (DoomlikeDungeons)"=false
 
         # Overhauls and fixes some issues with DramaticTrees such as making sound volume dependant on speed/size and allowing for passing through or breaking additional blocks
         B:"DramaticTrees Falling Overhaul (DramaticTrees)"=false
@@ -701,6 +716,21 @@ general {
 
         # Fixes grenades not being consumed if it is the last one
         B:"Fishs Undead Grenade Consuming (Fish's Undead Rising)"=false
+
+        # Fixes a crash when something runs pickBlock on a ClassyHat hat stand and passes in a null player
+        B:"Fix ClassyHats Hat Container Null Player Crash (ClassyHats)"=false
+
+        # Fixes errors from processing packets received after the player has already left a world
+        B:"Fix Delayed Packet Errors (Vanilla)"=true
+
+        # Fixes a crash where mob spawner mob ids will overlap with existing ids causing a MoBends crash
+        B:"Fix Duplicate MoBends Render ID Crash (Vanilla/MoBends)"=true
+
+        # Fixes Fish's Undead Rising Ghost Stew crashing/kicking players when eaten on a server
+        B:"Fix Fish's Undead Rising Ghost Stew Crash (Fish's Undead Rising)"=false
+
+        # Fixes exiting a hardcore world without spectating first not properly unloading the world
+        B:"Fix Hardcore World Not Unloading (Vanilla)"=true
 
         # Allows for placing LycanitesMobs charges in item frames
         B:"Fix LycanitesMobs Charges in Item Frames (LycanitesMobs)"=false
@@ -844,9 +874,13 @@ general {
 
         # Modifies the world creation process to limit users to creating only the preset world type
         B:"OTG Create World Simplify Fix (OTG)"=false
-
-        # Increase the timeout crash delay from OTG CustomStructureCache to 900 from 300 to lessen crash on pregeneration
         B:"OTG CustomStructureCache Crash Delay (OTG)"=false
+
+        # Improves world load speed on large maps such as pregenerated servers when using OTG
+        B:"OTG CustomStructureCache Improve Load Speed (OTG)"=false
+
+        # Adds additional checks to attempt to help prevent OTG's SaveToDIsk from crashing during pregeneration
+        B:"OTG Save To Disk Crash Checks (OTG)"=false
 
         # Rework Obsidian Skull/Shield fire resistance handling to be less buggy
         B:"Obsidian Skull/Shield Rework (BountifulBaubles)"=false
