--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -144,8 +144,20 @@ general {
         B:betterCombatMountFix=false
         B:chunkTicks=true
 
+        # Fixes memory leak in ContentCreator's render util class.
+        B:contentCreatorRenderUtilMemoryLeak=true
+
+        # Fixes craft tweaker's entity definition creation iterating over the entire entity registry.
+        B:craftTweakerFastEntityDefinition=true
+
         # Fixes mobs having trouble pathing through open doors
         B:doorPathfindingFix=true
+
+        # Fixes memory leak in EpicSiege's chunk cache class.
+        B:epicSiegeChunkCacheMemoryLeak=true
+
+        # Fix epic siege reducing damage of all mobs that are modified to 1.
+        B:epicSiegeReducedDamage=true
 
         # Enable to write modified classes to disk.
         B:export=false
@@ -153,11 +165,26 @@ general {
         # Fixes crash with bound scrolls and return scrolls, and removes their unexpected spawn setting
         B:fixWaystoneScrolls=true
 
+        # Fix infernal mobs trying to make mobs infernal on reload.
+        B:infernalMobsInfernalOnReload=true
+
+        # Fix infernal mobs modifiers targeting creative players.
+        B:infernalMobsTargetingCreative=true
+
         # Makes some entities stop checking for large entity collisions. Not needed without a max entity radius changing mod.
         B:lessCollisions=true
 
         # Fixes Lycanites Pet Dupe in older LycanitesMobs versions than 2.0.8.0, may cause crashes in newer versions.
         B:lycanitesPetDupeFix=false
+
+        # Drastically reduces the time to load shaders in Optifine.
+        B:optifineFastShaderLoading=true
+
+        # Changes OTG's toInternalName function to only work with valid entity id's which can improve loading times significantly.
+        B:otgFastInternalName=true
+
+        # Improves OTG's check for nearby structures which is slow and throws exceptions which are catched but ignored.
+        B:otgNearbyStructureCheck=true
 
         # Makes the particle queue threaded. Fixes concurrency issue with logical server creating physical client particles.
         B:particleThreading=true
@@ -230,6 +257,9 @@ general {
 
         # Fixes ghost chunkloading when creating pathfinding chunk caches
         B:pathfindingChunkCacheFix=true
+
+        # Prevents normally unnecessary structure recreation.
+        B:preventStructureRecreation=true
 
         # Fixes RealBench dupe bug
         B:realBenchDupeBugFix=true
